<resources>
    <string name="app_name">Föd</string>
    <!-- Strings related to login -->
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="login_title">Login or Register</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="logout">Logout</string>
    <string name="prompt_email">Email</string>
...
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="log_in_msg">Log in below to access the app. Click register to create a new account.</string>
    <string name="register_msg">Please enter your information below to create an account.</string>
    <string name="welcome_msg">Welcome to %1$s!</string>
    <!-- Strings related to Home -->
    <string name="home">Home</string>
    <!-- Strings related to Settings -->
    <string name="settings">Settings</string>
    <string name="account_title">Account Settings</string>
    <string name="logout_title">Log Out</string>
    <string name="logout_msg">Log out of your account</string>
    <string name="display_title">Display Settings</string>
    <!-- Strings related to Nutrition -->
    <string name="nutrition">Nutrition</string>
    <string name="nutrition_food">Food</string>
    <string name="nutrition_calories">Calories</string>
    <!-- Strings related to Recipes -->
    <string name="recipes">Recipes</string>
    <string name="recipes_id_input">Recipe ID</string>
    <string name="recipes_name_input">Name</string>
...
    <string name="recipes_add_recipe">ADD RECIPE</string>
    <string name="recipes_new_recipe_title">New Recipe</string>
    <!-- Strings related to Shopping -->
    <string name="shopping_list">Shopping List</string>
    <string name="shopping">Shopping</string>
    <string name="remove">Remove item</string>
    <string name="add_item">ADD ITEM</string>
    <string name="empty">Empty…</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
...
    <string name="recipes_for_you">Recipes for you</string>
    <string name="nutrient_image">Nutrient Image</string>
    <string name="left_button">Left Button</string>
    <string name="right_button">Right Button</string>
    <string name="slash">/</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="main_add_button">Main Add Button</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="add_to_food_log">Add to food log</string>
    <string name="write_new_recipe">Write new recipe</string>
    <string name="date">Date</string>
    <string name="previous_day">Previous day</string>
    <string name="next_day">Next day</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="popular">Popular</string>
    <string name="explore">Explore</string>
    <string name="newText">New</string>
...
